# 5letterGame_bot

./: README.md  pyproject.toml  requirements.txt
5_bot_venv/: .env  5_words.txt  bot.py  commands.py  config.py
core/: bot.py  service_messages.py
core/configs/: config_bot.py  config_log.py
core/handlers/: basics.py  user_input.py  words_utils.py
core/middlewares/: input_lists_filter.py  words_dict.py
